Modified index.html to show under construction

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Home
 ---
 
-{% assign page = site.posts.last %}
+
+This website is under construction. 
+<!-- {% assign page = site.posts.last %}
 {% assign content = page.content %}
-{% include post.html %}
+{% include post.html %} -->
