--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+
 title: Home
 ---
 
 
-This website is under construction. 
+This website is under construction.#
 <!-- {% assign page = site.posts.last %}
 {% assign content = page.content %}
 {% include post.html %} -->
