Finally destroyed index.html until website is ready for reality.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 title: Home
 ---
 
+<!-- also layout: default -->
 
-This website is under construction.#
+<h1>This website is under construction. See you soon!</h1>
+
 <!-- {% assign page = site.posts.last %}
 {% assign content = page.content %}
 {% include post.html %} -->
